# azsphere

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  app_manifest.json  build_model.py  cifar_task1.c  cifar_task2.c  cifar_task3.c  cifar_task4.c  config.c  constraints.txt  conv2d.c  conv2d_network.c  demo.c  demo1.c  demo_cifar.c  demo_keyword.c  exitcode.h  hello.c  intercomm.c  keyword_demo.c  keyword_demo_feature.c  keyword_test.c  kws_demo.c  kws_task0.c  kws_task1.c  kws_test.c  launch.vs.json  mfcc_test.cpp  network.h  requirements.txt  runtime.c  runtime_vm.c  test.c
Hardware/mt3620_rdb/: my_hardware.json
apps/kws_mic/: CMakeLists.txt  CMakeSettings.json  Makefile  README.md  app_manifest.json  demo_mic.c  demo_recorded.c  launch.vs.json  linker.ld  main.c  test.c
apps/kws_mic/include/: bundle.h  config.h  intercore.h  kws.h  mfcc.h  runtime.h  tvmruntime.h
apps/kws_mic/lib/: ADC.c  ADC.h  VectorTable.c  logical-intercore.c  logical-intercore.h  mt3620-intercore.c
apps/kws_mic/python/: build_model.py  mfcc.py  mic.py
apps/kws_mic/src/: bundle_static.c  intercore.c  kws.c  mfcc.c  tvmruntime.c
images/: enc28j60-isu0-int5.imagepackage
include/: config.h  example.h  exitcode.h  intercore.h  kws.h  network.h  runtime.h  tvmruntime.h  utils.h
python/: build_model.py  client.py  server.py
python/model/: Makefile
python/model/cifar/: cifar10.py
python/model/kws/: kws.py
python/model/kws/saved/: module_gs_4.0_conv_quantized.pickle
python/models/cifar/saved/: cifar10_ch8_best.h5
python/models/kws/saved/: module_gs_4.0.pickle
python/network/: tcp_server.py
python/tuning/: tune_analysis.py  tune_keyword.py
python/tuning/config/: Makefile  app_manifest.json
python/tuning/config/cifar10/: CMakeLists.txt
python/tuning/kws/: ks_conv_notquantized_multi.txt  ks_conv_notquantized_runtime_0.txt
python/tuning/npi/: tune_relay_npi.py
python/tuning/npi/schedules/: npi1000_armdev_poky_systemlib.txt
python/tuning/server/: server_back.py
python/tuning/server/cifar/: task_1.dump  task_2.dump
python/tuning/server/keyword_conv_notquantized_0/: task_1.dump
python/tuning/server/keyword_conv_quantized/: task_0.dump  task_3.dump
python/tuning/server/logs/: as1000_armdev_gnueabihf_systemlib.txt  as48_poky_systemlib.txt
scripts/: connect_debug.sh  gdbtest.py  logan.py  terminal.py
src/: bundle_static.c  eventloop_timer_utilities.c  example.cpp  intercore.c  kws.cpp  network.h  tvmruntime.c  utils.c
src/cifar_tasks/: cifar_task0.c
src/keyword_conv_quantized/: cifar_task0.c  cifar_task2.c
tuning/: Makefile  README.md  __init__.py  azure.py  azure_tune.py  cifar_best_0.txt  cifar_relay_footprint_min.txt  keyword_footprint_min.txt  keyword_runtime_min.txt  ks_conv_notquantized_footprint.txt  ks_conv_notquantized_runtime.txt  ks_conv_notquantized_test1.txt  tune_analysis.py  tune_azure.py  tune_cifar10.py  tune_keyword.py
tuning/config/: CMakeLists.txt  Makefile  app_manifest.json
tuning/config/cifar10/: Makefile
tuning/model/: Makefile  arm_keyword.py  cifar10.py  cifar10_arm.py  cifar10_relay.py  downcast.py  keyword_spotting.py  micro_speech.py
tuning/model/keyword_model/: keyword_module.txt  module_gs_1.0.pickle  module_gs_1.0.txt  module_gs_10.0.pickle  module_gs_10.0.txt  module_gs_12.0.pickle  module_gs_12.0.txt  module_gs_14.0.pickle  module_gs_14.0.txt  module_gs_16.0.pickle  module_gs_16.0.txt  module_gs_2.0.pickle  module_gs_2.0.txt  module_gs_4.0.pickle  module_gs_4.0.txt  module_gs_8.0.pickle  module_gs_8.0.txt
tuning/model/saved_models/: cifar10_arm  cifar10_ch1.h5  cifar10_ch16.h5  cifar10_ch2.h5  cifar10_ch4.h5  cifar10_ch8.h5
tuning/npi/: log_convert.py  npi_schedule_convert.py  npi_target.py  tune_relay_npi.py
tuning/npi/schedules/: npi1000_armdev_gnueabihf.txt  npi1000_armdev_gnueabihf_systemlib.txt  npi400_diff_target.txt  npi48_poky_systemlib.txt
tuning/npi/schedules/npi1000_armdev_gnueabihf_systemlib/: schedule_0001.txt  schedule_0002.txt  schedule_0006.txt  schedule_0009.txt  schedule_0010.txt  schedule_0011.txt  schedule_0012.txt  schedule_0013.txt  schedule_0015.txt  schedule_0016.txt  schedule_0017.txt  schedule_0019.txt  schedule_0020.txt  schedule_0022.txt  schedule_0023.txt  schedule_0024.txt  schedule_0025.txt  schedule_0027.txt  schedule_0028.txt  schedule_0030.txt  schedule_0033.txt  schedule_0034.txt  schedule_0035.txt  schedule_0037.txt  schedule_0040.txt  schedule_0041.txt  schedule_0042.txt  schedule_0043.txt  schedule_0045.txt  schedule_0046.txt  schedule_0047.txt  schedule_0048.txt  schedule_0051.txt  schedule_0052.txt  schedule_0056.txt  schedule_0057.txt  schedule_0058.txt  schedule_0059.txt  schedule_0060.txt  schedule_0061.txt  (+534 more)
tuning/npi/schedules/npi1000_armdev_poky_systemlib/: schedule_0003.txt  schedule_0006.txt  schedule_0008.txt  schedule_0010.txt  schedule_0011.txt  schedule_0012.txt  schedule_0013.txt  schedule_0017.txt  schedule_0018.txt  schedule_0019.txt  schedule_0023.txt  schedule_0024.txt  schedule_0025.txt  schedule_0027.txt  schedule_0029.txt  schedule_0034.txt  schedule_0038.txt  schedule_0040.txt  schedule_0041.txt  schedule_0046.txt  schedule_0048.txt  schedule_0049.txt  schedule_0050.txt  schedule_0053.txt  schedule_0054.txt  schedule_0055.txt  schedule_0058.txt  schedule_0061.txt  schedule_0062.txt  schedule_0063.txt  schedule_0064.txt  schedule_0066.txt  schedule_0067.txt  schedule_0071.txt  schedule_0072.txt  schedule_0073.txt  schedule_0074.txt  schedule_0075.txt  schedule_0079.txt  schedule_0080.txt  (+523 more)
tuning/server/: audio.py  client.py  tcp_server.py
tuning/server/cifar/: task_0.dump  task_3.dump  task_4.dump
tuning/server/keyword/: task_2.dump
tuning/server/keyword_conv_notquantized/: task_0.dump  task_1.dump  task_2.dump  task_3.dump
tuning/server/keyword_conv_notquantized_0/: task_3.dump
tuning/server/keyword_conv_quantized/: task_2.dump
tuning/server/logs/: as1000_armdev_poky_systemlib.txt  as1000_armdev_poky_systemlib_1.txt
tuning/server/server_log/: as400_diff_target.txt
tuning/src/: conv2d.c  runtime.c
(+1911 files in other folders)
